--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chatbot",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://chatbot-1440a.web.app",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
